--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -2,6 +2,13 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="app_name">ಮೊಮ್ಸ್ಪ್ರೆಸೊ</string>
+    <string name="groups_sections_polls">ಪೋಲ್‍ಗಳು</string>
+    <string name="groups_sections_myfeed">My Feed</string>
+    <string name="groups_groups_myfeed">গಗುಂಪುಗಳು</string>
+    <string name="groups.other_groups">OTHER GROUPS</string>
+
+    <string name="groups_enable_notification">ಅಧಿಸೂಚನೆಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ</string>
+
     <string name="unknown_person">Unknown</string>
     <string name="resend_email">Resend Email</string>
 
