--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -659,6 +659,8 @@
     <string name="author_type.expert">तज्ज्ञ</string>
     <string name="author_type.featured">अव्वल लेखक</string>
     <string name="author_type.user">USER</string>
+    <string name="groups_groups_myfeed">ग्रुप्स</string>
+
 
     <string name="no_article.be_first">ह्या श्रेणी मध्ये लेख लिहिणारे पहिले लेखक  व्हा</string>
 
@@ -697,21 +699,23 @@
     <string name="groups.block_member">Block Member</string>
     <string name="groups.remove_post">Remove Post</string>
     <string name="groups.save_post">Save Post</string>
-    <string name="groups.delete_post">Delete Post</string>
+    <string name="groups.delete_post">पोस्ट काढून टाका</string>
     <string name="groups.turn_notification_on">Turn On Notification</string>
     <string name="groups.turn_notification_off">Turn Off Notification</string>
     <string name="groups.enable_comment">Enable Comments</string>
     <string name="groups.disable_comment">Disable Comments</string>
     <string name="groups.report_post">Report This Post</string>
-    <string name="groups.block_this_user">Block This User</string>
-    <string name="groups.pin_post">Pin This Post To Top</string>
-    <string name="groups.unpin_post">Unpin This post</string>
+    <string name="groups.block_this_user">या यूजर ला ब्लॉक करा.</string>
+    <string name="groups.pin_post">या पोस्ट ला सर्वात वर पिन करा</string>
+    <string name="groups.unpin_post">या पोस्ट ला अनपिन करा.</string>
     <string name="groups.all_groups">ALL GROUPS</string>
-    <string name="groups.groups">GROUPS</string>
+    <string name="groups.groups">ग्रुप्स</string>
+    <string name="groups_sections_polls">मतदान</string>
+    <string name="groups_sections_myfeed">My Feed</string>
     <string name="groups.reported_by">Reported By</string>
     <string name="groups.persons">Persons</string>
     <string name="groups.no_action">No Action</string>
-    <string name="groups.block_user">Block User</string>
+    <string name="groups.block_user">यूजर ला ब्लॉक करा</string>
     <string name="groups.hide_content">Hide Content</string>
     <string name="groups.invite_members">INVITE MEMBERS</string>
     <string name="groups.invite_family">You can invite your friends and family to this group</string>
@@ -743,7 +747,7 @@
     <string name="groups.sections.photos">PHOTOS</string>
     <string name="groups.sections.videos">VIDEOS</string>
     <string name="groups.sections.top_posts">TOP POSTS</string>
-    <string name="groups.sections.polls">POLLS</string>
+    <string name="groups.sections.polls">मतदान</string>
     <string name="groups.search_in">Search</string>
     <string name="groups.join_form">JOINING FORM</string>
     <string name="groups.membership_pending">Membership Pending</string>
@@ -755,9 +759,10 @@
     <string name="groups.user_blocked_msg">You have been blocked from this group</string>
     <string name="groups.user_membership_rejected_msg">Your membership has been rejected for this group</string>
     <string name="groups.join_group">JOIN GROUP</string>
-    <string name="groups.ask_something">Ask something ...</string>
+    <string name="groups.ask_something">गटामध्ये सामील व्हा ...</string>
     <string name="groups.post_label">POST</string>
     <string name="groups.edit_post">EDIT POST</string>
+    <string name="groups.total_votes">एकूण मते: %1$s</string>
 
     <string name="no_story.be_first">सर्वप्रथम या विषयश्रेणीमध्ये तुम्ही कथा लिहा</string>
 
@@ -904,6 +909,10 @@
     <string name="rewards_expected_date">अपेक्षित तारीख</string>
     <string name="rewards_mobile_number_verified">मोबाईल नंबर तपासून पहा.</string>
     <string name="rewards_have_children">तुम्हाला मुलं आहेत का?</string>
+    <string name="groups_section_myfeed">My Feed</string>
+    <string name="groups_enable_notification">सूचना सक्षम करा
+</string>
+
     <string name="rewards_tab_detail">MyMoney</string>
     <string name="rewards_add_child">मुलांची माहिती</string>
     <string name="rewards_kid_detail">मुलांची माहिती</string>
@@ -915,13 +924,14 @@
     <string name="video_challenge_live_text">LIVE</string>
     <string name="video_challenge_text">CHALLENGES</string>
     <string name="choose_video_categories_text">CATEGORIES</string>
+    <string name="groups.other_groups">OTHER GROUPS</string>
 
     //groupdetail Activity toast String
     <string name="group_detail_activity_toast_text">You can also post anonymously </string>
-    <string name="group_add_comment_text">ADD COMMENT</string>
+    <string name="group_add_comment_text">टिप्पण्या जोडा</string>
     <string name="group_invite_text">Invite</string>
     <string name="group_comment_type_here_text">Type here</string>
-    <string name="group_comment_be_the_first_text">Be the first one to comment</string>
+    <string name="group_comment_be_the_first_text">प्रथम टिप्पणी करणारे व्हा</string>
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
