--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -662,6 +662,7 @@
     <string name="author_type.expert">நிபுணர்</string>
     <string name="author_type.featured">சிறப்பு எழுத்தாளர்</string>
     <string name="author_type.user">பயனர்</string>
+    <string name="groups_groups_myfeed">குரூப்கள்</string>
 
     <string name="no_article.be_first">Be the first one to write articles in this category!</string>
 
@@ -711,6 +712,9 @@
     <string name="groups.unpin_post">இந்த போஸ்டை அண்-பின் செய்யவும்</string>
     <string name="groups.all_groups">எல்லா குரூப்களும்</string>
     <string name="groups.groups">குரூப்கள்</string>
+    <string name="groups_sections_polls">வாக்கெடுப்பு</string>
+    <string name="groups_sections_myfeed">Mஎனக்கான பதிவுகள்</string>
+
     <string name="groups.reported_by">புகார் அளித்தவர்</string>
     <string name="groups.persons">நபர்கள்</string>
     <string name="groups.no_action">நடவடிக்கை இல்லை</string>
@@ -761,6 +765,7 @@
     <string name="groups.ask_something">ஏதாவது கேட்கவும் ...</string>
     <string name="groups.post_label">பதிவுகள்</string>
     <string name="groups.edit_post">EDIT POST</string>
+    <string name="groups.total_votes">மொத்த வாக்குகள் %1$s</string>
 
     <string name="no_story.be_first">இந்த பிரிவில் கதைகள் எழுதும் முதல் நபராக இருங்கள்.</string>
 
@@ -864,8 +869,6 @@
     <string name="add">கூட்டு</string>
 
 
-
-
     //Rewards Strings
 
 
@@ -911,19 +914,23 @@
     <string name="rewards_participating_earn_completing_profile">உங்கள் சுயவிவரத்தை நிறைவு செய்வதன் மூலம் இப்போது பங்கேற்று சம்பாதிக்கலாம்!</string>
     <string name="rewards_momspresso">மாம்ஸ்ப்ரெஸ்ஸோ வெகுமதிகள்</string>
     <string name="reward_welcome">Welcome to Momspresso MyMoney!</string>
+    <string name="groups_section_myfeed">నా గురించి </string>
+    <string name="groups_enable_notification">நோட்டிஃபிகேஷனை செயல்படுத்தவும்</string>
+
 
     //new Video Challenge Ui Strings
     <string name="video_challenge_live_text">LIVE</string>
     <string name="video_challenge_text">CHALLENGES</string>
     <string name="choose_video_categories_text">CATEGORIES</string>
+    <string name="groups.other_groups">మిగతా గ్రూప్స్ </string>
 
 
     //groupdetail Activity toast String
     <string name="group_detail_activity_toast_text">You can also post anonymously </string>
-    <string name="group_add_comment_text">ADD COMMENT</string>
+    <string name="group_add_comment_text">கமென்ட்ஸ் சேர்க்கவும்</string>
     <string name="group_invite_text">Invite</string>
     <string name="group_comment_type_here_text">Type here</string>
-    <string name="group_comment_be_the_first_text">Be the first one to comment</string>
+    <string name="group_comment_be_the_first_text">వ్యాఖ్యానించడానికి మీరే మొదటివారు అవ్వండి </string>
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
