--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -936,7 +936,7 @@
     <string name="group_add_comment_text">கமென்ட்ஸ் சேர்க்கவும்</string>
     <string name="group_invite_text">அழைக்கவும்</string>
     <string name="group_comment_type_here_text">Type here</string>
-    <string name="group_comment_be_the_first_text">వ్యాఖ్యానించడానికి మీరే మొదటివారు అవ్వండి </string>
+    <string name="group_comment_be_the_first_text">முதலில் கருத்து தெரிவிக்கவும்</string>
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
