--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -935,7 +935,7 @@
     <string name="group_add_comment_text">వ్యాఖ్యలను జోడించండి</string>
     <string name="group_invite_text">ఆహ్వానించండి </string>
     <string name="group_comment_type_here_text">ఇక్కడ టైప్ చేయండి</string>
-    <string name="group_comment_be_the_first_text">கமென்ட் செய்வதில் முதல் நபராக இருங்கள்</string>
+    <string name="group_comment_be_the_first_text">వ్యాఖ్యానించిన మొదటి వ్యక్తి అవ్వండి</string>
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
