--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -7,12 +7,15 @@
     <string name="groups.other_groups">Oঅন্যান্য গ্রুপস </string>
     <string name="groups_enable_notification">নোটিফিকেশন সক্রিয় করুন </string>
 
+    <string name="view_more_profile">view more</string>
 
+    <string name="groups_sections_ask">ASK AN EXPERT</string>
 
     <string name="write_review_prompt">আপনি কি পর্যালোচনা করতে চান ?</string>
     <string name="groups_sections_polls">পোল</string>
     <string name="groups_sections_myfeed">আমার ফিড </string>
     <string name="loading_txt">লোডিং &#8230;</string>
+    <string name="campaign_maybe_later_text">Maybe later</string>
 
     <string name="subcategoryName">subCagegory</string>
     <string name="location_info">ব্যক্তিগত সুপারিশের জন্য, আপনার পছন্দের স্থান নির্বাচন করুন</string>
@@ -697,9 +700,6 @@
     <!--<string name="groups.reported_content">REPORTED CONTENT</string>-->
     <!--<string name="groups.anonymous">ANONYMOUS</string>-->
     <!--<string name="groups.membership_request_msg">We have received your request for joining this group. Your membership will be confirmed once it is approved by the moderators of this group.</string>-->
-
-
-
 
 
     <string name="groups.moderator_invitation">মডারেটর হওয়ার জন্য আমন্ত্রণ করুন</string>
